// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default - value[0] 1`] = `
<div
  class="ant-breadcrumb emotion-0"
  id="default"
/>
`;

exports[`Render properties.list.icon - value[0] 1`] = `
<div
  class="ant-breadcrumb emotion-0"
  id="properties.list.icon"
>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        data-testid="properties.list.icon_0"
      >
        Link Props:
        {"className":"css-1u8qly9","label":"label 1","icon":"AiOutlineSave"}
         
        <span
          class="anticon"
          role="img"
        >
          <svg
            data-testid="AiOutlineExclamationCircle"
          >
            {"id":"properties.list.icon_0_icon","title":"AiOutlineSave","className":"css-tfe6dx","required":false}
          </svg>
        </span>
        label 1
      </a>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        data-testid="properties.list.icon_1"
      >
        Link Props:
        {"className":"css-1u8qly9","label":"label 2","icon":"AiOutlineDelete"}
         
        <span
          class="anticon"
          role="img"
        >
          <svg
            data-testid="AiOutlineExclamationCircle"
          >
            {"id":"properties.list.icon_1_icon","title":"AiOutlineDelete","className":"css-tfe6dx","required":false}
          </svg>
        </span>
        label 2
      </a>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
</div>
`;

exports[`Render properties.list.icon with onClick - value[0] 1`] = `
<div
  class="ant-breadcrumb emotion-0"
  id="properties.list.icon with onClick"
>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        data-testid="properties.list.icon with onClick_0"
      >
        Link Props:
        {"className":"css-z8opiu","label":"label 1","icon":"AiOutlineSave"}
         
        <span
          class="anticon"
          role="img"
        >
          <svg
            data-testid="AiOutlineExclamationCircle"
          >
            {"id":"properties.list.icon with onClick_0_icon","title":"AiOutlineSave","className":"css-tfe6dx","required":false}
          </svg>
        </span>
        label 1
      </a>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        data-testid="properties.list.icon with onClick_1"
      >
        Link Props:
        {"className":"css-z8opiu","label":"label 2","icon":"AiOutlineDelete"}
         
        <span
          class="anticon"
          role="img"
        >
          <svg
            data-testid="AiOutlineExclamationCircle"
          >
            {"id":"properties.list.icon with onClick_1_icon","title":"AiOutlineDelete","className":"css-tfe6dx","required":false}
          </svg>
        </span>
        label 2
      </a>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
</div>
`;

exports[`Render properties.list.label strings - value[0] 1`] = `
<div
  class="ant-breadcrumb emotion-0"
  id="properties.list.label strings"
>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        data-testid="properties.list.label strings_0"
      >
        Link Props:
        {"0":"P","1":"a","2":"g","3":"e","4":" ","5":"O","6":"n","7":"e","className":"css-1u8qly9"}
         
        Page One
      </a>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        data-testid="properties.list.label strings_1"
      >
        Link Props:
        {"0":"P","1":"a","2":"g","3":"e","4":" ","5":"t","6":"w","7":"o","className":"css-1u8qly9"}
         
        Page two
      </a>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
</div>
`;

exports[`Render properties.list.pageId - value[0] 1`] = `
<div
  class="ant-breadcrumb emotion-0"
  id="properties.list.pageId"
>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        data-testid="properties.list.pageId_0"
      >
        Link Props:
        {"className":"css-1u8qly9","pageId":"page1"}
         
        default_title
      </a>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        data-testid="properties.list.pageId_1"
      >
        Link Props:
        {"className":"css-1u8qly9","pageId":"page2"}
         
        default_title
      </a>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
</div>
`;

exports[`Render properties.list.pageId label and url - value[0] 1`] = `
<div
  class="ant-breadcrumb emotion-0"
  id="properties.list.pageId label and url"
>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        data-testid="properties.list.pageId label and url_0"
      >
        Link Props:
        {"className":"css-1u8qly9","url":"https://www.url.com","pageId":"page1"}
         
        default_title
      </a>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        data-testid="properties.list.pageId label and url_1"
      >
        Link Props:
        {"className":"css-1u8qly9","url":"https://www.url.com","label":"label url"}
         
        label url
      </a>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        data-testid="properties.list.pageId label and url_2"
      >
        Link Props:
        {"className":"css-1u8qly9","pageId":"page2","label":"label pageId"}
         
        label pageId
      </a>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        data-testid="properties.list.pageId label and url_3"
      >
        Link Props:
        {"className":"css-1u8qly9","url":"https://docs.url.com","pageId":"page3"}
         
        default_title
      </a>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        data-testid="properties.list.pageId label and url_4"
      >
        Link Props:
        {"className":"css-1u8qly9","label":"label4"}
         
        label4
      </a>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
</div>
`;

exports[`Render properties.list.style - value[0] 1`] = `
<div
  class="ant-breadcrumb emotion-0"
  id="properties.list.style"
>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        data-testid="properties.list.style_0"
      >
        Link Props:
        {"className":"css-1yy2kbx","label":"Page One","style":{"color":"blue"}}
         
        Page One
      </a>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        data-testid="properties.list.style_1"
      >
        Link Props:
        {"className":"css-evmfe4","label":"Page two","style":{"color":"red"}}
         
        Page two
      </a>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
</div>
`;

exports[`Render properties.list.url - value[0] 1`] = `
<div
  class="ant-breadcrumb emotion-0"
  id="properties.list.url"
>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        data-testid="properties.list.url_0"
      >
        Link Props:
        {"className":"css-1u8qly9","url":"https://www.url.com"}
         
        default_title
      </a>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        data-testid="properties.list.url_1"
      >
        Link Props:
        {"className":"css-1u8qly9","url":"https://docs.url.com"}
         
        default_title
      </a>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
</div>
`;

exports[`Render properties.separator - value[0] 1`] = `
<div
  class="ant-breadcrumb emotion-0"
  id="properties.separator"
>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        data-testid="properties.separator_0"
      >
        Link Props:
        {"className":"css-1u8qly9","label":"Page One"}
         
        Page One
      </a>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      -&gt;
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        data-testid="properties.separator_1"
      >
        Link Props:
        {"className":"css-1u8qly9","label":"Page two"}
         
        Page two
      </a>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      -&gt;
    </span>
  </span>
</div>
`;

exports[`Render properties.style: fontSize: 18 - value[0] 1`] = `
.emotion-0 {
  font-size: 18px;
}

<div
  class="ant-breadcrumb emotion-0"
  id="properties.style: fontSize: 18"
>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        data-testid="properties.style: fontSize: 18_0"
      >
        Link Props:
        {"className":"css-1u8qly9","label":"Page One"}
         
        Page One
      </a>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        data-testid="properties.style: fontSize: 18_1"
      >
        Link Props:
        {"className":"css-1u8qly9","label":"Page two"}
         
        Page two
      </a>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
</div>
`;

exports[`Render required = true default - value[0] 1`] = `
<div
  class="ant-breadcrumb emotion-0"
  id="default"
/>
`;

exports[`Render required = true properties.list.icon - value[0] 1`] = `
<div
  class="ant-breadcrumb emotion-0"
  id="properties.list.icon"
>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        data-testid="properties.list.icon_0"
      >
        Link Props:
        {"className":"css-1u8qly9","label":"label 1","icon":"AiOutlineSave"}
         
        <span
          class="anticon"
          role="img"
        >
          <svg
            data-testid="AiOutlineExclamationCircle"
          >
            {"id":"properties.list.icon_0_icon","title":"AiOutlineSave","className":"css-tfe6dx","required":false}
          </svg>
        </span>
        label 1
      </a>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        data-testid="properties.list.icon_1"
      >
        Link Props:
        {"className":"css-1u8qly9","label":"label 2","icon":"AiOutlineDelete"}
         
        <span
          class="anticon"
          role="img"
        >
          <svg
            data-testid="AiOutlineExclamationCircle"
          >
            {"id":"properties.list.icon_1_icon","title":"AiOutlineDelete","className":"css-tfe6dx","required":false}
          </svg>
        </span>
        label 2
      </a>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
</div>
`;

exports[`Render required = true properties.list.icon with onClick - value[0] 1`] = `
<div
  class="ant-breadcrumb emotion-0"
  id="properties.list.icon with onClick"
>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        data-testid="properties.list.icon with onClick_0"
      >
        Link Props:
        {"className":"css-z8opiu","label":"label 1","icon":"AiOutlineSave"}
         
        <span
          class="anticon"
          role="img"
        >
          <svg
            data-testid="AiOutlineExclamationCircle"
          >
            {"id":"properties.list.icon with onClick_0_icon","title":"AiOutlineSave","className":"css-tfe6dx","required":false}
          </svg>
        </span>
        label 1
      </a>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        data-testid="properties.list.icon with onClick_1"
      >
        Link Props:
        {"className":"css-z8opiu","label":"label 2","icon":"AiOutlineDelete"}
         
        <span
          class="anticon"
          role="img"
        >
          <svg
            data-testid="AiOutlineExclamationCircle"
          >
            {"id":"properties.list.icon with onClick_1_icon","title":"AiOutlineDelete","className":"css-tfe6dx","required":false}
          </svg>
        </span>
        label 2
      </a>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
</div>
`;

exports[`Render required = true properties.list.label strings - value[0] 1`] = `
<div
  class="ant-breadcrumb emotion-0"
  id="properties.list.label strings"
>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        data-testid="properties.list.label strings_0"
      >
        Link Props:
        {"0":"P","1":"a","2":"g","3":"e","4":" ","5":"O","6":"n","7":"e","className":"css-1u8qly9"}
         
        Page One
      </a>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        data-testid="properties.list.label strings_1"
      >
        Link Props:
        {"0":"P","1":"a","2":"g","3":"e","4":" ","5":"t","6":"w","7":"o","className":"css-1u8qly9"}
         
        Page two
      </a>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
</div>
`;

exports[`Render required = true properties.list.pageId - value[0] 1`] = `
<div
  class="ant-breadcrumb emotion-0"
  id="properties.list.pageId"
>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        data-testid="properties.list.pageId_0"
      >
        Link Props:
        {"className":"css-1u8qly9","pageId":"page1"}
         
        default_title
      </a>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        data-testid="properties.list.pageId_1"
      >
        Link Props:
        {"className":"css-1u8qly9","pageId":"page2"}
         
        default_title
      </a>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
</div>
`;

exports[`Render required = true properties.list.pageId label and url - value[0] 1`] = `
<div
  class="ant-breadcrumb emotion-0"
  id="properties.list.pageId label and url"
>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        data-testid="properties.list.pageId label and url_0"
      >
        Link Props:
        {"className":"css-1u8qly9","url":"https://www.url.com","pageId":"page1"}
         
        default_title
      </a>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        data-testid="properties.list.pageId label and url_1"
      >
        Link Props:
        {"className":"css-1u8qly9","url":"https://www.url.com","label":"label url"}
         
        label url
      </a>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        data-testid="properties.list.pageId label and url_2"
      >
        Link Props:
        {"className":"css-1u8qly9","pageId":"page2","label":"label pageId"}
         
        label pageId
      </a>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        data-testid="properties.list.pageId label and url_3"
      >
        Link Props:
        {"className":"css-1u8qly9","url":"https://docs.url.com","pageId":"page3"}
         
        default_title
      </a>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        data-testid="properties.list.pageId label and url_4"
      >
        Link Props:
        {"className":"css-1u8qly9","label":"label4"}
         
        label4
      </a>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
</div>
`;

exports[`Render required = true properties.list.style - value[0] 1`] = `
<div
  class="ant-breadcrumb emotion-0"
  id="properties.list.style"
>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        data-testid="properties.list.style_0"
      >
        Link Props:
        {"className":"css-1yy2kbx","label":"Page One","style":{"color":"blue"}}
         
        Page One
      </a>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        data-testid="properties.list.style_1"
      >
        Link Props:
        {"className":"css-evmfe4","label":"Page two","style":{"color":"red"}}
         
        Page two
      </a>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
</div>
`;

exports[`Render required = true properties.list.url - value[0] 1`] = `
<div
  class="ant-breadcrumb emotion-0"
  id="properties.list.url"
>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        data-testid="properties.list.url_0"
      >
        Link Props:
        {"className":"css-1u8qly9","url":"https://www.url.com"}
         
        default_title
      </a>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        data-testid="properties.list.url_1"
      >
        Link Props:
        {"className":"css-1u8qly9","url":"https://docs.url.com"}
         
        default_title
      </a>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
</div>
`;

exports[`Render required = true properties.separator - value[0] 1`] = `
<div
  class="ant-breadcrumb emotion-0"
  id="properties.separator"
>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        data-testid="properties.separator_0"
      >
        Link Props:
        {"className":"css-1u8qly9","label":"Page One"}
         
        Page One
      </a>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      -&gt;
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        data-testid="properties.separator_1"
      >
        Link Props:
        {"className":"css-1u8qly9","label":"Page two"}
         
        Page two
      </a>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      -&gt;
    </span>
  </span>
</div>
`;

exports[`Render required = true properties.style: fontSize: 18 - value[0] 1`] = `
.emotion-0 {
  font-size: 18px;
}

<div
  class="ant-breadcrumb emotion-0"
  id="properties.style: fontSize: 18"
>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        data-testid="properties.style: fontSize: 18_0"
      >
        Link Props:
        {"className":"css-1u8qly9","label":"Page One"}
         
        Page One
      </a>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        data-testid="properties.style: fontSize: 18_1"
      >
        Link Props:
        {"className":"css-1u8qly9","label":"Page two"}
         
        Page two
      </a>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
</div>
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.list.icon 1`] = `true`;

exports[`Test Schema properties.list.icon 2`] = `null`;

exports[`Test Schema properties.list.icon with onClick 1`] = `true`;

exports[`Test Schema properties.list.icon with onClick 2`] = `null`;

exports[`Test Schema properties.list.label strings 1`] = `true`;

exports[`Test Schema properties.list.label strings 2`] = `null`;

exports[`Test Schema properties.list.pageId 1`] = `true`;

exports[`Test Schema properties.list.pageId 2`] = `null`;

exports[`Test Schema properties.list.pageId label and url 1`] = `true`;

exports[`Test Schema properties.list.pageId label and url 2`] = `null`;

exports[`Test Schema properties.list.style 1`] = `true`;

exports[`Test Schema properties.list.style 2`] = `null`;

exports[`Test Schema properties.list.url 1`] = `true`;

exports[`Test Schema properties.list.url 2`] = `null`;

exports[`Test Schema properties.separator 1`] = `true`;

exports[`Test Schema properties.separator 2`] = `null`;

exports[`Test Schema properties.style: fontSize: 18 1`] = `true`;

exports[`Test Schema properties.style: fontSize: 18 2`] = `null`;
